--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 /test/version_tmp/
 /tmp/
 /log/
+/db/*.sqlite3
+/db/*.sqlite3-journal
 
 # Used by dotenv library to load environment variables.
 # .env
