git ignore update

--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,7 @@ build-iPhoneSimulator/
 # .ruby-gemset
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
-.rvmrc
+.
+
+# public asssets
+public/images/
